[2023][Day1] Answer 1 & Tests